--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://github.com/yk0610/lh_challenge01.git"
+  "homepage": "https://yk0610.github.io/lh_challenge01"
 }
