--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://yk0610.github.io/challenge_01"
+  "homepage": "https://yk0610.github.io/lh-challenge01"
 }
